
==============
2013-02-07
this is a first release of mageia.light.synth.1
=============
2013-02-20
echoe.synth.1 released
=============