@@ -1,1 +1,2 @@
 free for non-commercial use
+OAL, EFML, CC-BY-SA, Free Art
