@@ -19,11 +19,14 @@ and here's the complete code https://github.com/SyMbiANtS/usual.art/
 now you need to change only configure.ac and index.theme.in files to change the name of theme
 
 2013-02-20
-echoe synth release
+echoe synth release by
 
-OEAI 2013
+OEAi SYMBiANTS 2013
+License 
+EFML or Free Art and OAL or CC-BY-SA
+just not for sale
 
-
+======================================
 FREEDESKTOP SOUND THEME
 
 LICENSES AND ORIGINS:
