@@ -4,6 +4,7 @@ AC_PREREQ([2.60])
 AC_INIT([sound-theme-echoe.synth-1],
         [1],
         [https://github.com/SyMbiANtS/usual.art])
+IT_PROG_INTLTOOL([0.40.0])
 
 AC_CONFIG_SRCDIR([index.theme.in])
 
@@ -11,11 +12,11 @@ AM_INIT_AUTOMAKE([1.9 no-dist-gzip dist-bzip2])
 
 AC_SUBST(VERSION)
 
-THEME_NAME=echoe.synth-1
-AC_SUBST(THEME_NAME)
-AC_DEFINE_UNQUOTED(THEME_NAME,"$THEME_NAME")
 
-IT_PROG_INTLTOOL([0.40.0])
+THEME_NAME=echoe.synth-1
+
+AC_SUBST(THEME_NAME)
+AC_DEFINE_UNQUOTED(THEME_NAME, $THEME_NAME)
 GETTEXT_PACKAGE=sound-theme-$THEME_NAME
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE")
