@@ -1,8 +1,11 @@
 
-==============
+=============
 2013-02-07
 this is a first release of mageia.light.synth.1
 =============
 2013-02-20
 echoe.synth.1 released
+=============
+2013-10-25
+made rpm build of package visit github.com/symbiants/usual.art for more news
 =============
